--- a/documentation/controllers/UserController.html
+++ b/documentation/controllers/UserController.html
@@ -228,8 +228,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="33"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:33</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="39"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:39</a></div>
                         </td>
                     </tr>
 
@@ -309,8 +309,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="52"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:52</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="58"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:58</a></div>
                         </td>
                     </tr>
 
@@ -421,8 +421,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="72"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:72</a></div>
                         </td>
                     </tr>
 
@@ -500,8 +500,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="80"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:80</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="86"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:86</a></div>
                         </td>
                     </tr>
 
@@ -579,8 +579,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="73"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:73</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="79"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:79</a></div>
                         </td>
                     </tr>
 
@@ -671,8 +671,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="93"
-                                    class="link-to-prism">src/modules/user/user.controller.ts:93</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="99"
+                                    class="link-to-prism">src/modules/user/user.controller.ts:99</a></div>
                         </td>
                     </tr>
 
@@ -753,7 +753,13 @@
 import { UserService } from &#x27;./user.service&#x27;;
 import { CreateUserDto, ProfileDto } from &#x27;./dto/create-user.dto&#x27;;
 import { UpdateUserDto } from &#x27;./dto/update-user.dto&#x27;;
-import { ApiTags, ApiQuery, ApiBearerAuth, ApiOperation, ApiConsumes } from &#x27;@nestjs/swagger&#x27;;
+import {
+  ApiTags,
+  ApiQuery,
+  ApiBearerAuth,
+  ApiOperation,
+  ApiConsumes,
+} from &#x27;@nestjs/swagger&#x27;;
 import { AssociativeArray, storage } from &#x27;@/utils&#x27;;
 import { AuthGuard, AuthUserType } from &#x27;@/guards&#x27;;
 import { Roles, User } from &#x27;@/decorators&#x27;;
@@ -763,7 +769,7 @@ import { FileFieldsInterceptor } from &#x27;@nestjs/platform-express&#x27;;
 @ApiTags(&#x27;Users&#x27;)
 @Controller(&#x27;users&#x27;)
 export class UserController {
-  constructor(private readonly userService: UserService) { }
+  constructor(private readonly userService: UserService) {}
 
   @Post()
   create(@Body() createUserDto: CreateUserDto) {
@@ -834,8 +840,7 @@ export class UserController {
 @ApiTags(&#x27;Profile&#x27;)
 @Controller(&#x27;profile&#x27;)
 export class ProfileController {
-
-  constructor(private readonly userService: UserService) { }
+  constructor(private readonly userService: UserService) {}
   @ApiOperation({ summary: &#x27;Get user profile&#x27; })
   @ApiBearerAuth()
   @Roles(RolesEnum.ALL)
@@ -862,17 +867,20 @@ export class ProfileController {
   @ApiBearerAuth()
   @Roles(RolesEnum.ALL)
   @UseGuards(AuthGuard)
-  updateProfile(@User() user: AuthUserType, @Body() updateUserDto: ProfileDto,
+  updateProfile(
+    @User() user: AuthUserType,
+    @Body() updateUserDto: ProfileDto,
     @UploadedFiles()
     files: {
       profile_picture: Express.Multer.File;
-    }) {
+    },
+  ) {
     return this.userService.updateProfile(updateUserDto, user, files);
   }
 
-  @Get(&quot;/debug-sentry&quot;)
+  @Get(&#x27;/debug-sentry&#x27;)
   getError() {
-    throw new Error(&quot;My first Sentry error!&quot;);
+    throw new Error(&#x27;My first Sentry error!&#x27;);
   }
 }
 </code></pre>
