--- a/documentation/index.html
+++ b/documentation/index.html
@@ -95,7 +95,19 @@
   [![Sponsors on Open Collective](https://opencollective.com/nest/sponsors/badge.svg)](https://opencollective.com/nest#sponsor)-->
 
 <h2>Description</h2>
-<p><a href="https://github.com/nestjs/nest">Nest</a> framework TypeScript starter repository.</p>
+<p>A comprehensive E-Learning API built with NestJS and TypeScript. This platform provides a complete backend solution for online education, featuring course management, user authentication, lesson tracking, quizzes, and more.</p>
+<h3>Features</h3>
+<ul>
+<li><strong>User Management</strong>: User registration, authentication, and profile management</li>
+<li><strong>Course Management</strong>: Create, update, and organize courses with categories</li>
+<li><strong>Lesson System</strong>: Structured lessons with content delivery</li>
+<li><strong>Quiz &amp; Assessment</strong>: Interactive quizzes for learning evaluation</li>
+<li><strong>Category Organization</strong>: Organize courses by categories for better navigation</li>
+<li><strong>File Upload</strong>: Support for course materials and media uploads</li>
+<li><strong>Authentication</strong>: Secure JWT-based authentication system</li>
+<li><strong>Monitoring</strong>: Integrated with Prometheus for performance monitoring</li>
+<li><strong>Documentation</strong>: Auto-generated API documentation</li>
+</ul>
 <h2>Installation</h2>
 <b>Example :</b><div><pre class="line-numbers"><code class="language-bash">$ yarn install</code></pre></div><h2>Running the app</h2>
 <b>Example :</b><div><pre class="line-numbers"><code class="language-bash"># development
@@ -114,15 +126,9 @@ $ yarn run test:e2e
 
 # test coverage
 $ yarn run test:cov</code></pre></div><h2>Support</h2>
-<p>Nest is an MIT-licensed open source project. It can grow thanks to the sponsors and support by the amazing backers. If you&#39;d like to join them, please <a href="https://docs.nestjs.com/support">read more here</a>.</p>
-<h2>Stay in touch</h2>
-<ul>
-<li>Author - <a href="https://kamilmysliwiec.com">Kamil Myśliwiec</a></li>
-<li>Website - <a href="https://nestjs.com/">https://nestjs.com</a></li>
-<li>Twitter - <a href="https://twitter.com/nestframework">@nestframework</a></li>
-</ul>
+<p>This is an open source e-learning API project. Contributions and feedback are welcome to help improve the platform and make online education more accessible.</p>
 <h2>License</h2>
-<p>Nest is <a href="LICENSE">MIT licensed</a>.</p>
+<p>This project is <a href="LICENSE">MIT licensed</a>.</p>
 
 
 
