--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -757,13 +757,25 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/PrometheusMiddleware.html">src/modules/prometheus/prometheus.middleware.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>PrometheusMiddleware</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./injectables/PrometheusService.html">src/modules/prometheus/prometheus.service.ts</a>
             </td>
             <td>injectable</td>
             <td>PrometheusService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+                <span class="coverage-count">(0/14)</span>
             </td>
         </tr>
         <tr class="low">
