--- a/documentation/injectables/QuizService.html
+++ b/documentation/injectables/QuizService.html
@@ -162,7 +162,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/modules/quiz/quiz.service.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/modules/quiz/quiz.service.ts:11</a></div>
                             </td>
                         </tr>
 
@@ -275,8 +275,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="32"
-                                    class="link-to-prism">src/modules/quiz/quiz.service.ts:32</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="27"
+                                    class="link-to-prism">src/modules/quiz/quiz.service.ts:27</a></div>
                         </td>
                     </tr>
 
@@ -342,14 +342,9 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@nestjs/common&#x27;;
 import { CreateQuizDto } from &#x27;./dto/create-quiz.dto&#x27;;
-import { UpdateQuizDto } from &#x27;./dto/update-quiz.dto&#x27;;
+// import {  } from &#x27;./dto/update-quiz.dto&#x27;;
 import { InjectRepository } from &#x27;@nestjs/typeorm&#x27;;
-import {
-  Quiz,
-  Question,
-  QuestionType,
-  AnswerOption,
-} from &#x27;./entities/quiz.entity&#x27;;
+import { Quiz, Question, AnswerOption } from &#x27;./entities/quiz.entity&#x27;;
 import { Repository } from &#x27;typeorm&#x27;;
 import { Lesson } from &#x27;../lessons/entities/lesson.entity&#x27;;
 import { ResponseService } from &#x27;@/utils&#x27;;
@@ -384,10 +379,10 @@ export class QuizService {
         });
       }
 
-      const options &#x3D; createQuizDto.questions.map((question) &#x3D;&gt; ({
-        text: question.options,
-        isCorrect: question.correctAnswers,
-      }));
+      // const options &#x3D; createQuizDto.questions.map((question) &#x3D;&gt; ({
+      //   text: question.options,
+      //   isCorrect: question.correctAnswers,
+      // }));
 
       const quiz &#x3D; this.quizRepository.create({
         title: createQuizDto.title,
